// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container allows additional classes to be passed through 1`] = `
.c0 {
  width: 100%;
  margin: auto;
  padding-left: 1.6rem;
  padding-right: 1.6rem;
  max-width: 120rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

<div>
  <div
    class="c0 test-class"
  />
</div>
`;

exports[`Container has a container and fixed class by default 1`] = `
.c0 {
  width: 100%;
  margin: auto;
  padding-left: 1.6rem;
  padding-right: 1.6rem;
  max-width: 120rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`Container renders children 1`] = `
.c0 {
  width: 100%;
  margin: auto;
  padding-left: 1.6rem;
  padding-right: 1.6rem;
  max-width: 120rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

<div>
  <div
    class="c0"
  >
    <div
      class="child-content"
    >
      test
    </div>
  </div>
</div>
`;

exports[`Container renders correctly without props 1`] = `
.c0 {
  width: 100%;
  margin: auto;
  padding-left: 1.6rem;
  padding-right: 1.6rem;
  max-width: 120rem;
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

@media (min-width:1024px) {

}

<div>
  <div
    class="c0"
  />
</div>
`;
